--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,27 @@
+agate==1.9.1
+annotated-types==0.7.0
 asttokens==3.0.1
+attrs==25.4.0
+babel==2.18.0
 certifi==2026.1.4
 cffi==2.0.0
 charset-normalizer==3.4.4
+click==8.3.1
 colorama==0.4.6
 comm==0.2.3
 cryptography==46.0.4
+daff==1.4.2
+dbt-adapters==1.22.5
+dbt-common==1.37.2
+dbt-core==1.11.5
+dbt-duckdb==1.10.0
+dbt-extractor==0.6.0
+dbt-protos==1.0.431
+dbt-semantic-interfaces==0.9.0
 debugpy==1.8.20
 decorator==5.2.1
+deepdiff==8.6.1
+duckdb==1.4.4
 executing==2.2.1
 google-api-core==2.29.0
 google-auth==2.48.0
@@ -16,18 +31,32 @@ google-crc32c==1.8.0
 google-resumable-media==2.8.0
 googleapis-common-protos==1.72.0
 idna==3.11
+importlib_metadata==8.7.1
 ipykernel==7.2.0
 ipython==9.10.0
 ipython_pygments_lexers==1.1.1
+isodate==0.7.2
 jedi==0.19.2
+Jinja2==3.1.6
+jsonschema==4.26.0
+jsonschema-specifications==2025.9.1
 jupyter_client==8.8.0
 jupyter_core==5.9.1
+leather==0.4.1
+MarkupSafe==3.0.3
+mashumaro==3.14
 matplotlib-inline==0.2.1
+more-itertools==10.8.0
+msgpack==1.1.2
 nest-asyncio==1.6.0
+networkx==3.6.1
 numpy==2.4.2
+orderly-set==5.5.0
 packaging==26.0
 pandas==3.0.0
+parsedatetime==2.6
 parso==0.8.5
+pathspec==0.12.1
 platformdirs==4.5.1
 prompt_toolkit==3.0.52
 proto-plus==1.27.1
@@ -38,15 +67,29 @@ pyarrow==23.0.0
 pyasn1==0.6.2
 pyasn1_modules==0.4.2
 pycparser==3.0
+pydantic==2.12.5
+pydantic_core==2.41.5
 Pygments==2.19.2
 python-dateutil==2.9.0.post0
+python-slugify==8.0.4
+pytimeparse==1.1.8
+pytz==2025.2
+PyYAML==6.0.3
 pyzmq==27.1.0
+referencing==0.37.0
 requests==2.32.5
+rpds-py==0.30.0
 rsa==4.9.1
 six==1.17.0
+snowplow-tracker==1.1.0
+sqlparse==0.5.4
 stack-data==0.6.3
+text-unidecode==1.3
 tornado==6.5.4
 traitlets==5.14.3
+typing-inspection==0.4.2
+typing_extensions==4.15.0
 tzdata==2025.3
 urllib3==2.6.3
 wcwidth==0.6.0
+zipp==3.23.0
