feat(week-4): :sparkles: add ingestion scripts and dbt setup for FHV data

--- a/04-analytics-engineering/taxi_rides_ny/models/staging/sources.yml
+++ b/04-analytics-engineering/taxi_rides_ny/models/staging/sources.yml
@@ -98,3 +98,22 @@ sources:
             description: Improvement surcharge
           - name: total_amount
             description: Total amount charged
+
+      - name: fhv_tripdata
+        description: Raw For-Hire Vehicle (FHV) trip records
+        loaded_at_field: pickup_datetime
+        columns:
+          - name: dispatching_base_num
+            description: TLC base company code of the base that dispatched the trip
+          - name: pickup_datetime
+            description: Date and time of the trip pick-up
+          - name: dropoff_datetime
+            description: Date and time of the trip drop-off
+          - name: pulocationid
+            description: TLC Taxi Zone where the trip started
+          - name: dolocationid
+            description: TLC Taxi Zone where the trip ended
+          - name: sr_flag
+            description: Shared ride flag (indicates if trip was shared)
+          - name: affiliated_base_number
+            description: Base number affiliated with the trip
